# afacinemas-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
afacinemas_scraper/: __init__.py  main.py  scraper.py
afacinemas_scraper/core/: base.py  cinemas.py  filme.py  lancamentos.py  precos.py  programacao.py
tests/: test_afacinemas_scraper.py
