[tool.poetry]
name = "afacinemas-scraper"
version = "0.2.0"
description = "Ferramenta para raspagem de dados do site da rede Afa Cinemas"
authors = ["Douglas Gusson <douglasgusson@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/douglasgusson/afacinemas-scraper"
keywords = ["python", "scraping"]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.25.1"
bs4 = "^0.0.1"
requests-cache = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
isort = "^5.7.0"
pytest-cov = "^2.10.1"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
